--- a/index.html
+++ b/index.html
@@ -3,36 +3,132 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>Laboratoire2</title>
+    <title>BestBuy</title>
 </head>
-
 <body>
 
 <h1>Portable tactile 15,6 po de HP (Argenté)</h1>
+
 <h3 class="specs">Core i5-7200U Intel – DD 1 To – RAM 8 Go – Windows 10 ®</h3>
 
 <div class="liens">
-<a href="#Survol">Survol |</a>
-<a href="#En-savoir-plus">En savoir plus |</a>
-<a href="#Details">Détails et caractéristiques |</a>
-<a href="#Contact">Nous contacter</a>
+    <a href="#Survol">Survol |</a>
+    <a href="#En-savoir-plus">En savoir plus |</a>
+    <a href="#Details">Détails et caractéristiques |</a>
+    <a href="#Contact">Nous contacter</a>
 </div>
 
-<img src="img1.jpg" alt="portableTactile">
+<img class="img-centered" src="img1.jpg" alt="portableTactile">
 
 
-<a class="vert" name = "Survol">Survol</a>
+<a class="vert" name="Survol"><h3>Survol</h3></a>
 
-<p>Le portable tactile de 15,6 po 15-BS028CA de HP offre les performances dont vous avez besoin pour le jeu ou le travail. Un processeur de 2,5 GHz Core i5 d'Intel, 8 Go de mémoire vive et un disque dur de 1 To vous assurent de rester productif. Son écran tactile DEL de 15,6 po produit une image nette, lumineuse et détaillée pour tout votre contenu. Il comporte un port Ethernet Gigabit et la connectivité Wi-Fi.</p>
+<p>Le portable tactile de 15,6 po <b>15-BS028CA</b> de HP offre les performances dont vous avez besoin pour le jeu ou le
+    travail. Un processeur de 2,5 GHz Core i5 d'Intel, 8 Go de mémoire vive et un disque dur de 1 To vous assurent de
+    rester productif. Son écran tactile DEL de 15,6 po produit une image nette, lumineuse et détaillée pour tout votre
+    contenu. Il comporte un port Ethernet Gigabit et la connectivité Wi-Fi.</p>
 
-<img src="img3.jpg" alt="ordinateurHP">
+<img class="img-centered" src="img3.jpg" alt="ordinateurHp"><br>
+
+<div class="retour">
+<img class="haut" src="bouton_haut.png" alt="lien vers le haut">
+<a href="">Haut de la page</a>
+</div><br>
+
+<a class="vert" name="En-savoir-plus"><h3>En savoir plus</h3></a>
+
+<ol>
+    <li>
+        <mark>Processeur</mark>
+        Core i5-7200U à 2,5 GHz d'Intel et 8 Go de mémoire vive DDR4 offrant une performance rapide, réactive
+        et fiable pour toutes vos activités informatiques quotidiennes.
+    </li>
+
+    <li>
+        <mark>Disque dur</mark>
+        de 1 To offrant beaucoup d'espace pour stocker tous vos fichiers
+    </li>
+
+    <li>
+        <mark>Écran tactile</mark>
+        rétroéclairé par DEL blanches HD SVA de 15,6 po avec résolution native de 1366 x 768 produisant
+        une image claire, lumineuse et détaillée pour vos pages Web et vos logiciels.
+    </li>
+
+    <li>
+        <mark>Port Ethernet</mark>
+        10/100 pour une connexion fiable et sécurisée par câble, et une plus grande vitesse de transfert
+        de données.
+    </li>
+</ol>
+
+<img class="img-centered" src="img2.jpg" alt="portableTactile"><br>
+
+<div class="retour">
+<img class="haut" src="bouton_haut.png" alt="lien vers le haut">
+<a href="#">Haut de la page</a>
+</div><br>
+
+<a class="vert" name="Details"><h3>Détails et caractéristiques</h3></a>
 
 
+<ul>
+    <li>Écran
+        <ul>
+            <li>Format de l'écran : <u>15,6 po</u></li>
+        </ul>
+        <ul>
+            <li>Résolution d'écran : <u>1366 x 768 px</u></li>
+        </ul>
+        <ul>
+            <li> Écran tactile : <u>Oui</u></li>
+        </ul>
+    </li>
+    <br>
 
+    <li>Processeur
+        <ul>
+            <li>Type de processeur : <u>Core i5-7200U d'Intel</u></li>
+        </ul>
+        <ul>
+            <li>Coeurs de processeur : <u>2</u></li>
+        </ul>
+        <ul>
+            <li>Vitesse du processeur : <u>2,5 GHz</u></li>
+        </ul>
+    </li>
+    <br>
 
+    <li> Disque dur
+        <ul>
+            <li> Capacité du disque dur : <u>1 To</u></li>
+        </ul>
+        <ul>
+            <li>Vitesse du disque dur : <u>5400 RPM</u></li>
+        </ul>
+</ul>
 
+<div class="retour">
+<img class="haut" src="bouton_haut.png" alt="lien vers le haut">
+<a href="">Haut de la page</a>
+</div><br>
 
+<a class="vert" name="Contact"><h3>Nous contacter</h3></a>
 
+<img class="img-centered best-buy"  src="img5.jpg" alt="magasinBestBuy"><br>
+
+<div>Adresse : 3450 Boul. de Portland, Sherbrooke, QC, J1L 2A6</div><br>
+
+<div>Numéro de téléphone : (819) 347-3275</div><br>
+
+<div>Site Web :<a href="http://bestbuy.ca"> http://bestbuy.ca</a></div><br>
+
+<div>Courriel :<a href="info@bestbuy.ca">info@bestbuy.ca</a></div><br><br>
+
+<div class="retour">
+    <img class="haut" src="bouton_haut.png" alt="lien vers le haut">
+    <a href="">Haut de la page</a>
+</div>
 
 
 </body>
